--- a/style.css
+++ b/style.css
@@ -1237,9 +1237,9 @@ margin: 120px auto;
     
   }
 
-	    nav .navbar {
+	    /* nav .navbar {
       margin:70px;
-    }
+    } */
   .services{
     height:auto;
     
