--- a/style.css
+++ b/style.css
@@ -1099,6 +1099,9 @@ margin: 120px auto;
 	.about-details .right{
     width: 100%;
 }
+	.about .about-details .left {
+    width: 100%;
+}
   .services{
     height: auto;
     
@@ -1231,6 +1234,9 @@ margin: 120px auto;
   }
 
 	.about-details .right{
+    width: 100%;
+}
+	.about .about-details .left {
     width: 100%;
 }
  	.home .home-content{
