--- a/style.css
+++ b/style.css
@@ -728,7 +728,23 @@ section .title span::after{
   color: #071629;
   
 }
+/* masonry grid */
+.masonry-grid {
+    width: 100%;
+    margin: 40px auto;
+}
 
+.grid-item {
+    width: 1200px;
+    margin-bottom: 15px;
+    height: 1100px;
+}
+
+.grid-item video, .grid-item iframe {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 /* Contact Me CSS */
 .contact{
   background: #071629;
