--- a/style.css
+++ b/style.css
@@ -749,7 +749,7 @@ background-repeat: no-repeat;
 .grid-item {
     width: 100%;
     margin-bottom: 30px;
-    /* height: 1200px; */
+    height: 1200px;
 	
 }
 
