--- a/style.css
+++ b/style.css
@@ -754,9 +754,12 @@ background-repeat: no-repeat;
 }
 
 .grid-item video, .grid-item iframe {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+	width: auto;
+    max-height:auto;
+	margin:auto;
+    /* object-fit: cover; */
 }
 /* Contact Me CSS */
 .contact{
