--- a/style.css
+++ b/style.css
@@ -754,12 +754,12 @@ background-repeat: no-repeat;
 }
 
 .grid-item video, .grid-item iframe {
-    max-width: 100%;
-    max-height: 100%;
-	width: auto;
+   width: 100%;
+   height: 100%;
+	/* width: auto;
     max-height:auto;
-	margin:auto;
-    /* object-fit: cover; */
+	margin:auto; */
+    object-fit: contain;
 }
 /* Contact Me CSS */
 .contact{
